z-index and fixed background

--- a/main.scss
+++ b/main.scss
@@ -17,7 +17,7 @@ body {
 
 #navigation {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   background-color: rgb(0, 0, 0);
   width: 100%;
@@ -65,6 +65,7 @@ body {
 
 .title {
   position: absolute;
+  z-index: 1;
   top: 235px;
   width: 100%;
 
@@ -80,6 +81,7 @@ body {
 }
 
 .header-background {
+  position: fixed;
   width: 100%;
 }
 
@@ -161,7 +163,7 @@ body {
       .collection {
         position: relative;
         margin: 10px;
-        display: block;
+        display: inline-block;
         background-color: rgb(245, 245, 245);
         float: left;
         line-height: 1px;
